# safenpx

./: .bazelrc  .gitignore  AGENTS.md  BUILD.bazel  CONTRIBUTING.md  Cargo.toml  LICENSE.md  MODULE.bazel  README.md  SECURITY.md  index.md  justfile
.githooks/: pre-push
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  community-sponsor-task.yml  config.yml  feature.yml  registry-audit-task.yml  security-task.yml
.github/workflows/: ci.yml
crates/: BUILD.bazel  index.md
crates/safe-npx/: BUILD.bazel  Cargo.toml  index.md
crates/safe-npx/fixtures/: authority-redaction-fixture-manifest.txt  bin-selection-fixture-manifest.txt  canary-fixture-manifest.txt  delegation-feasibility-manifest.txt  inspect-human-integrity-failure.txt  inspect-human-missing-optional-metadata.txt  inspect-human-normal.txt  inspect-human-redacted-authority.txt  inspect-human-static-blockers.txt  inspect-human-unsupported.txt  inspect-json-schema-v0-ask.json  inspect-json-schema-v0-compatibility.json  inspect-json-schema-v0-failure.json  inspect-json-schema-v0-integrity-failure.json  inspect-json-schema-v0-missing-optional-metadata.json  inspect-json-schema-v0-redacted-authority.json  inspect-json-schema-v0-static-blockers.json  inspect-json-schema-v0-unsupported.json  m1-fixture-manifest.txt  m2-closure-fixture-manifest.md  m2-closure-fixture-manifest.txt  no-network-manifest.md  no-network-manifest.txt  race-matrix-fixture-manifest.txt
crates/safe-npx/src/: authority_context.rs  bin_selection.rs  canary.rs  closure.rs  closure_blockers.rs  contracts.rs  decision_integration_tests.rs  delegation_feasibility.rs  direct_execution.rs  download.rs  executable_identity.rs  extraction.rs  extraction_tests.rs  fixtures.rs  heuristic_guardrail_tests.rs  inspect.rs  inspect_golden_fixtures.rs  inspect_human_golden_tests.rs  inspect_json_golden_tests.rs  inspect_json_policy_tests.rs  inspect_json_schema.rs  inspect_json_schema_tests.rs  inspect_latency.rs  inspect_latency_tests.rs  inspect_model.rs  inspect_model_tests.rs  inspect_receipt.rs  inspect_receipt_tests.rs  integrity.rs  lib.rs  m2_fixtures.rs  m2_report.rs  m3_inspect.rs  m3_inspect_canary_tests.rs  m3_inspect_tests.rs  main.rs  package_evidence.rs  package_metadata.rs  parser.rs  policy.rs  (+15 more)
docs/: demo-flow-spec.md  handle-reservation.md  inspect-first-poc.md  inspect-json-schema-v0.md  inspect-latency-budgets.md  m2-execution-decision.md  m4-policy-v0.md  milestones.md  one-year-vision.md  public-benefit-plan.md  roadmap.md  technical-scope.typ  threat-model.md
playbooks/: index.md
playbooks/repository/: index.md  plan-issue.md  playbook-specification.md  review-turn.md
policies/: BUILD.bazel  check.sh  index.md
policies/_lib/: common.sh
policies/bazel-ownership/: check.sh  guide.md
policies/changed-file-coverage/: check.sh  guide.md
policies/ci-entry-consistency/: check.sh  guide.md
policies/clean-repo-before-tests/: check.sh  guide.md
policies/conventional-commits/: check.sh  guide.md
policies/db-contract-fail-closed/: check.sh  guide.md
policies/dead-code/: check.sh  guide.md
policies/dependency-sync/: check.sh  guide.md
policies/documentation-coverage/: check.sh  guide.md
policies/file-size/: check.sh  guide.md
policies/generated-artifacts/: check.sh  guide.md
policies/incomplete-production-rust/: check.sh  guide.md
policies/index-coverage/: check.sh  guide.md
policies/interface-boundary/: check.sh  guide.md
policies/just-test-nightly-fmt/: check.sh  guide.md
policies/local-secret-paths/: check.sh  guide.md
policies/migration-timestamp/: check.sh  guide.md
policies/migrations-immutable/: check.sh  guide.md
policies/no-javascript/: check.sh  guide.md
policies/playbook-spec/: check.sh  guide.md
policies/policy-completeness/: check.sh  guide.md
policies/policy-exceptions/: check.sh  guide.md
policies/policy-order/: check.sh  guide.md
policies/protected-promotions/: check.sh  guide.md
policies/release-evidence/: check.sh  guide.md
policies/release-inventory/: check.sh  guide.md
policies/release-provenance/: check.sh  guide.md
policies/replicated-code/: check.sh  guide.md
policies/secret-hygiene/: check.sh  guide.md
policies/sql-repository-boundary/: check.sh  guide.md
policies/supply-chain-baseline/: check.sh  guide.md
policies/supply-chain-delta/: check.sh  guide.md
policies/typescript-exceptions/: check.sh  guide.md
reservations/crates/safenpx/: Cargo.toml
src/: main.rs
tools/: BUILD.bazel  index.md
tools/github/: BUILD.bazel  bootstrap-roadmap.sh  ensure-gh-auth.sh  index.md  issue-done.sh  issue-list.sh  issue-start.sh  issue-view.sh  roadmap-status.sh
work-trace/10/: README.md  progress.md  requirements-brief.md  spec-index.md
work-trace/11/: README.md  progress.md  requirements-brief.md  spec-index.md
work-trace/12/: README.md  progress.md  requirements-brief.md  spec-index.md
work-trace/2/: README.md  progress.md  spec-index.md
work-trace/22/: README.md  progress.md
work-trace/3/: README.md  progress.md  requirements-brief.md  spec-index.md
work-trace/30/: README.md  progress.md  spec-index.md
work-trace/31/: README.md  progress.md  spec-index.md
work-trace/32/: README.md  progress.md  spec-index.md
work-trace/33/: README.md  progress.md  spec-index.md
work-trace/34/: README.md  progress.md  spec-index.md
work-trace/35/: README.md  progress.md  requirements-brief.md  spec-index.md
work-trace/36/: README.md  progress.md  requirements-brief.md  spec-index.md
work-trace/37/: README.md  progress.md  requirements-brief.md  spec-index.md
work-trace/38/: README.md  progress.md  spec-index.md
work-trace/39/: README.md  progress.md  spec-index.md
work-trace/4/: README.md  progress.md  requirements-brief.md  spec-index.md
work-trace/40/: README.md  m1-closeout-evidence.md  progress.md  spec-index.md
work-trace/41/: README.md  progress.md  spec-index.md
work-trace/42/: README.md  progress.md  requirements-brief.md  spec-index.md
work-trace/43/: README.md  progress.md  requirements-brief.md  spec-index.md
(+244 files in other folders)
