"""Bazel module definition for safenpx."""

module(
    name = "safenpx",
    version = "0.1.0",
)

bazel_dep(name = "rules_rust", version = "0.69.0")

RUST_EDITION = "2021"
RUST_VERSION = "1.88.0"

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = RUST_EDITION,
    versions = [RUST_VERSION],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

crate = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = ["//crates/safe-npx:Cargo.toml"],
)
use_repo(crate, "crates")
