load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")

package(default_visibility = ["//visibility:public"])

RUST_DEPS = [
    "@crates//:anyhow",
    "@crates//:base64",
    "@crates//:clap",
    "@crates//:flate2",
    "@crates//:reqwest",
    "@crates//:serde",
    "@crates//:serde_json",
    "@crates//:sha2",
    "@crates//:tar",
]

rust_library(
    name = "safe-npx-lib",
    srcs = [
        "src/canary.rs",
        "src/closure.rs",
        "src/closure_blockers.rs",
        "src/contracts.rs",
        "src/download.rs",
        "src/extraction.rs",
        "src/extraction_tests.rs",
        "src/fixtures.rs",
        "src/integrity.rs",
        "src/inspect.rs",
        "src/lib.rs",
        "src/m2_fixtures.rs",
        "src/package_metadata.rs",
        "src/parser.rs",
        "src/registry.rs",
        "src/report.rs",
        "src/report_tests.rs",
        "src/resolver.rs",
    ],
    compile_data = [
        "fixtures/canary-fixture-manifest.txt",
        "fixtures/m1-fixture-manifest.txt",
        "fixtures/m2-closure-fixture-manifest.txt",
        "fixtures/no-network-manifest.txt",
    ],
    crate_name = "safe_npx",
    edition = "2021",
    deps = RUST_DEPS,
)

rust_binary(
    name = "safe-npx",
    srcs = ["src/main.rs"],
    crate_name = "safe_npx",
    edition = "2021",
    deps = [
        ":safe-npx-lib",
        "@crates//:anyhow",
        "@crates//:clap",
    ],
)

rust_test(
    name = "safe-npx_test",
    crate = ":safe-npx-lib",
    deps = RUST_DEPS,
)
