[package]
name = "safe-npx"
version = "0.1.0-alpha.0"
edition = "2021"
license = "Apache-2.0"
description = "Rust execution gate that adds package evidence before npx/npm exec runs remote code"
repository = "https://github.com/wonop-io/safenpx"
readme = "../../README.md"

[[bin]]
name = "safe-npx"
path = "src/main.rs"

[lib]
name = "safe_npx"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
flate2 = "1.1.9"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4.46"
