[package]
name = "safenpx"
version = "0.0.0-reserved.0"
edition = "2021"
license = "MIT"
description = "Reserved crate name for safe-npx, a Rust execution gate that adds package evidence before npx/npm exec runs remote code"
repository = "https://github.com/wonop-io/safenpx"
homepage = "https://safenpx.com/"
readme = "README.md"

[dependencies]

